--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
   <footer class="py-8 text-center text-sm text-gray-500 dark:text-gray-400">
-    © <span id="y"></span> © 2025 Ezequiel Ramirez - Softw Arg. Todos los derechos reservados.
+    © <span id="y"></span> 2025 Ezequiel Ramirez - Softw Arg. Todos los derechos reservados.
     <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
   </footer>
